Fixed sidebar view on small screens

--- a/includes/public/css/wzkb-styles.css
+++ b/includes/public/css/wzkb-styles.css
@@ -198,6 +198,15 @@
 	position: relative;
 }
 
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+@media only screen and (max-width: 480px) {
+	.sidebar, .content-area {
+		float: none !important;
+		width: 98% !important;
+		margin-left: 0;
+	}
+}
+
 .sidebar .widget {
 	padding: 20px;
 	margin-top: 10px;
